--- a/src/MV/ForumParserBundle/Resources/config/config.yml
+++ b/src/MV/ForumParserBundle/Resources/config/config.yml
@@ -1,2 +1,3 @@
 parameters:
-  mv.forum_url: http://m.mediavida.com/foro
+  mv.url: http://m.mediavida.com
+  mv.forum_url: http://m.mediavida.com/foro/
