--- a/src/MV/ForumParserBundle/Resources/config/routing.yml
+++ b/src/MV/ForumParserBundle/Resources/config/routing.yml
@@ -1,9 +1,9 @@
-mv_forum_parser_titles:
+mv_forum_parser_forums:
     path:     /
-    defaults: { _controller: MVForumParserBundle:Main:index }
+    defaults: { _controller: MVForumParserBundle:Main:getForums }
     methods:   [GET]
 
-mv_forum_parser_forum:
-    path:     /{slug_forum}
-    defaults: { _controller: MVForumParserBundle:Main:forum }
+mv_forum_parser_topics:
+    path:     /getTopics/{slug_forum}
+    defaults: { _controller: MVForumParserBundle:Main:getTopics }
     methods:   [GET]
