--- a/src/MV/ForumParserBundle/Resources/config/routing.yml
+++ b/src/MV/ForumParserBundle/Resources/config/routing.yml
@@ -11,7 +11,7 @@ mv_forum_parser_topics:
     page: \d+
 
 mv_forum_parser_posts:
-  path: /getPost/{cat}/{slug_post}/{page}
+  path: /getPost/{slug_forum}/{slug_post}/{page}
   defaults: { _controller: MVForumParserBundle:Main:getPosts, page: 1 }
   methods: [GET]
   requirements:
