add getNotifications and cookies

--- a/src/MV/ForumParserBundle/Resources/config/routing.yml
+++ b/src/MV/ForumParserBundle/Resources/config/routing.yml
@@ -21,3 +21,8 @@ mv_forum_parser_login:
   path: /login
   defaults: { _controller: MVForumParserBundle:Login:login }
   methods: [POST]
+
+mv_forum_parser_notifs:
+  path: /getNotifications
+  defaults: { _controller: MVForumParserBundle:Notifications:getNotifications }
+  methods: [GET]
