--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,15 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.3.*",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "1.2.*",
         "twig/extensions": "1.0.*",
+        "symfony/symfony": "2.5.6",
         "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "2.3.*",
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "fabpot/goutte": "~2.0",
-        "symfony/http-foundation": "2.5.5"
+        "fabpot/goutte": "~2.0"
     },
     "scripts": {
         "post-install-cmd": [
@@ -41,7 +37,7 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
