--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,3 +38,20 @@ assetic:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
         #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+
+
+nelmio_cors:
+   defaults:
+       allow_credentials: true
+       allow_origin: []
+       allow_headers: []
+       allow_methods: []
+       expose_headers: []
+       max_age: 0
+       hosts: []
+   paths:
+    '^/':
+        allow_origin: ['*']
+        allow_headers: ['origin', 'content-type']
+        allow_methods: ['POST', 'PUT', 'GET', 'DELETE','OPTIONS']
+        max_age: 3600
