--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "fabpot/goutte": "~2.0"
+        "fabpot/goutte": "~2.0",
+        "nelmio/cors-bundle": "1.3.2"
     },
     "scripts": {
         "post-install-cmd": [
