--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "fabpot/goutte": "~2.0",
-        "nelmio/cors-bundle": "1.3.2"
+        "nelmio/cors-bundle": "~1.3"
     },
     "scripts": {
         "post-install-cmd": [
