--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,14 +42,16 @@ assetic:
 
 nelmio_cors:
    defaults:
-      allow_credentials: true
-      allow_origin: ['*']
-      allow_headers: ['*']
-      allow_methods: ['POST', 'PUT', 'GET', 'DELETE','OPTIONS']
-      max_age: 3600
+       allow_credentials: true
+       allow_origin: []
+       allow_headers: []
+       allow_methods: []
+       expose_headers: []
+       max_age: 0
+       hosts: []
    paths:
     '^/':
         allow_origin: ['*']
-        allow_headers: ['*']
+        allow_headers: ['origin', 'content-type']
         allow_methods: ['POST', 'PUT', 'GET', 'DELETE','OPTIONS']
         max_age: 3600
