--- a/src/MV/ForumParserBundle/Resources/config/routing.yml
+++ b/src/MV/ForumParserBundle/Resources/config/routing.yml
@@ -21,6 +21,10 @@ mv_forum_parser_login:
   path: /login
   defaults: { _controller: MVForumParserBundle:Login:login }
 
+mv_forum_parser_logout:
+  path: /logout
+  defaults: { _controller: MVForumParserBundle:Login:logout }
+
 mv_forum_parser_notifs:
   path: /getNotifications
   defaults: { _controller: MVForumParserBundle:Notifications:getNotifications }
